--- a/index.html
+++ b/index.html
@@ -179,8 +179,7 @@
                     <div class="contact-intro">
                         <h2>Contacto y Reportes</h2>
                         <p>
-                            ¿Experimentando problemas con tu sistema NCR POS? Utiliza nuestra plataforma oficial 
-                            de gestión de incidentes o contacta directamente con nuestro equipo N2 a través de los siguientes canales.
+                            ¿Experimentando problemas con tu sistema NCR POS? Contacta al equipo de Mesa de Ayuda a través de los siguientes canales.
                         </p>
                     </div>
                     
@@ -227,7 +226,6 @@
     <footer>
         <div class="footer-content">
             <p>&copy; 2025 Equipo Soporte POS N2 - GDN Argentina</p>
-            <p>Especialistas en Sistemas NCR • Soporte Técnico Avanzado</p>
         </div>
     </footer>
 
