modo claro oscuro / faq / responsive mobile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
                 <li><a href="#servicios">Servicios</a></li>
                 <li><a href="#equipo">Equipo</a></li>
                 <li><a href="#contacto">Contacto</a></li>
+                <li><a href="#faq">FAQ</a></li>
                 <li><a href="https://help.tata.com.uy/jira/servicedesk/customer/portal/742" target="_blank" rel="noopener noreferrer" class="cta-button">Reportar Incidente</a></li>
+                <li><button id="theme-toggle" class="theme-toggle" aria-label="Cambiar tema">
+                    <span class="theme-toggle-dark">🌙</span>
+                    <span class="theme-toggle-light">☀️</span>
+                </button></li>
             </ul>
             <button class="mobile-menu-btn">☰</button>
         </nav>
@@ -216,6 +221,63 @@
                                 <strong>Guardias Pasivas</strong><br>
                                 Sábados y Domingos
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="faq" id="faq">
+            <div class="container">
+                <h2 class="section-title">Preguntas Frecuentes</h2>
+                <div class="faq-container">
+                    <div class="faq-item">
+                        <div class="faq-question">
+                            <h3>¿Qué tipos de incidentes atiende el equipo de Soporte POS N2?</h3>
+                            <span class="faq-icon">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>Nuestro equipo atiende incidentes de nivel 2 relacionados con sistemas NCR POS, incluyendo problemas de software, hardware, configuración y conectividad que requieren conocimiento técnico avanzado.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item">
+                        <div class="faq-question">
+                            <h3>¿Cuál es el horario de atención del soporte?</h3>
+                            <span class="faq-icon">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>Brindamos soporte en horario laboral de lunes a viernes, y contamos con guardias pasivas los fines de semana para incidentes críticos que afecten la operatividad del negocio.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item">
+                        <div class="faq-question">
+                            <h3>¿Cómo se reporta un incidente crítico fuera del horario laboral?</h3>
+                            <span class="faq-icon">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>Los incidentes críticos fuera de horario deben reportarse a través del portal de incidentes Jira Service Desk y adicionalmente contactar al número de guardia pasiva proporcionado por su coordinador de cuenta.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item">
+                        <div class="faq-question">
+                            <h3>¿Qué información debo proporcionar al reportar un incidente?</h3>
+                            <span class="faq-icon">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>Para una resolución más eficiente, proporcione: número de terminal/POS, descripción detallada del problema, capturas de pantalla de errores, acciones realizadas antes del incidente y nivel de impacto en la operación.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item">
+                        <div class="faq-question">
+                            <h3>¿Cómo puedo acceder a la documentación técnica?</h3>
+                            <span class="faq-icon">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>Puede acceder a nuestra documentación técnica a través del enlace en la sección de Servicios o directamente en <a href="https://drive.google.com/drive/folders/1J4jXM2xnpR6HSlEEsVvC3SxTRtoqR02u?usp=drive_link" target="_blank" rel="noopener noreferrer">este enlace</a>.</p>
                         </div>
                     </div>
                 </div>
