--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:; connect-src 'self'; font-src 'self'; object-src 'none'; media-src 'self'; frame-src 'self'; frame-ancestors 'self'; form-action 'self';">
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+    <meta name="referrer" content="no-referrer-when-downgrade">
     <title>Equipo Soporte POS N2 - GDN Argentina</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
@@ -223,8 +229,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
+                    
         </section>
 
         <section class="faq" id="faq">
@@ -268,16 +273,6 @@
                         </div>
                         <div class="faq-answer">
                             <p>Para una resolución más eficiente, proporcione: número de terminal/POS, descripción detallada del problema, capturas de pantalla de errores, acciones realizadas antes del incidente y nivel de impacto en la operación.</p>
-                        </div>
-                    </div>
-
-                    <div class="faq-item">
-                        <div class="faq-question">
-                            <h3>¿Cómo puedo acceder a la documentación técnica?</h3>
-                            <span class="faq-icon">+</span>
-                        </div>
-                        <div class="faq-answer">
-                            <p>Puede acceder a nuestra documentación técnica a través del enlace en la sección de Servicios o directamente en <a href="https://drive.google.com/drive/folders/1J4jXM2xnpR6HSlEEsVvC3SxTRtoqR02u?usp=drive_link" target="_blank" rel="noopener noreferrer">este enlace</a>.</p>
                         </div>
                     </div>
                 </div>
